--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lint:ts": "npm run lint:js -- --ext .ts",
     "lint:tsc": "tsc --noEmit",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:ts -- --fix",
-    "prepublishOnly": "npm run lint && npm test && npm run clean && npm run build",
+    "prepublishOnly": "pinst --disable && npm run lint && npm test && npm run clean && npm run build",
     "release": "standard-version --no-verify",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "postinstall": "husky install",
+    "postpublish": "pinst --enable"
   },
   "homepage": "https://remarkablemark.org/mdtocs/",
   "repository": {
@@ -47,9 +49,10 @@
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.16.0",
     "eslint-plugin-prettier": "^3.3.0",
-    "husky": "^4.3.6",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "rollup": "^2.35.1",
     "rollup-plugin-terser": "^7.0.2",
