--- a/package.json
+++ b/package.json
@@ -40,26 +40,26 @@
     "generator"
   ],
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@rollup/plugin-typescript": "^10.0.1",
-    "@size-limit/preset-small-lib": "^7.0.3",
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.1",
-    "jest": "^27.4.3",
-    "lint-staged": "^13.0.0",
-    "pinst": "^3.0.0",
-    "prettier": "^2.5.0",
-    "rollup": "^2.60.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "size-limit": "^7.0.3",
-    "standard-version": "^9.3.2",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "@commitlint/cli": "17.0.0",
+    "@commitlint/config-conventional": "17.0.0",
+    "@rollup/plugin-typescript": "10.0.1",
+    "@size-limit/preset-small-lib": "7.0.3",
+    "@types/jest": "27.0.3",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
+    "eslint": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "8.0.1",
+    "jest": "27.4.3",
+    "lint-staged": "13.0.0",
+    "pinst": "3.0.0",
+    "prettier": "2.5.0",
+    "rollup": "2.60.2",
+    "rollup-plugin-terser": "7.0.2",
+    "size-limit": "7.0.3",
+    "standard-version": "9.3.2",
+    "ts-jest": "27.0.7",
+    "typescript": "4.5.2"
   },
   "files": [
     "cjs/",
