--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,38 @@
 name: build
 on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: npm install
-      - run: npx commitlint --from=HEAD~1
-      - run: npm run lint
-      - run: npm test
-      - run: npm run build
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version-file: .nvmrc
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Lint commit message
+        run: npx commitlint --from=HEAD~1
+
+      - name: Run ESLint
+        run: npm run lint
+
+      - name: Run Jest
+        run: npm test
+
+      - name: Build library
+        run: npm run build
+
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ github.token }}
