--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -3,13 +3,15 @@ on:
   pull_request:
     branches:
       - master
+
 jobs:
   size:
     runs-on: ubuntu-latest
     env:
       CI_JOB_NUMBER: 1
+
     steps:
       - uses: actions/checkout@v3
       - uses: andresz1/size-limit-action@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ github.token }}
