--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@typescript-eslint/parser": "5.59.6",
     "eslint": "8.41.0",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-tsdoc": "0.2.17",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "lint-staged": "13.2.2",
