--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,11 @@
   },
   "parser": "@typescript-eslint/parser",
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "tsdoc"],
   "rules": {
     "no-console": "error",
     "no-debugger": "error",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "tsdoc/syntax": "error"
   }
 }
