--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,5 @@
     "strict": true,
     "removeComments": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src"]
 }
