--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,5 @@ jobs:
       - name: Build library
         run: npm run build
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ github.token }}
+      - name: Codecov
+        uses: codecov/codecov-action@v3
