ci(github): add CODECOV_TOKEN to workflow build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,10 @@ jobs:
       - name: Run Jest
         run: npm test
 
-      - name: Build library
-        run: npm run build
-
       - name: Codecov
         uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Build library
+        run: npm run build
