--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "lint:js": "eslint --ignore-path .gitignore .",
     "lint:ts": "npm run lint:js -- --ext .ts",
     "lint:tsc": "tsc --noEmit",
-    "postinstall": "husky install",
-    "postpublish": "pinst --enable",
-    "prepublishOnly": "pinst --disable && npm run lint && npm test && npm run clean && npm run build",
+    "prepare": "husky",
+    "prepublishOnly": "npm run lint && npm test && npm run clean && npm run build",
     "size": "npm run build && size-limit",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
@@ -54,7 +53,6 @@
     "husky": "9.0.10",
     "jest": "29.7.0",
     "lint-staged": "15.2.2",
-    "pinst": "3.0.0",
     "prettier": "3.2.5",
     "rollup": "2.79.1",
     "rollup-plugin-terser": "7.0.2",
