chore(eslint): migrate to eslint 9
https://eslint.org/docs/latest/use/configure/migration-guide

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "build:cjs": "tsc --declaration --outDir cjs",
     "build:umd": "rollup --config",
     "clean": "rm -rf cjs umd",
-    "lint": "npm run lint:js && npm run lint:ts && npm run lint:tsc",
-    "lint:fix": "npm run lint:js -- --fix && npm run lint:ts -- --fix",
-    "lint:js": "eslint --ignore-path .gitignore .",
-    "lint:ts": "npm run lint:js -- --ext .ts",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
     "lint:tsc": "tsc --noEmit",
     "prepare": "husky",
     "prepublishOnly": "npm run lint && npm test && npm run clean && npm run build",
@@ -41,6 +39,9 @@
   "devDependencies": {
     "@commitlint/cli": "19.4.1",
     "@commitlint/config-conventional": "19.4.1",
+    "@eslint/compat": "1.1.1",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.9.1",
     "@rollup/plugin-typescript": "11.1.6",
     "@size-limit/preset-small-lib": "11.1.4",
     "@types/jest": "29.5.12",
@@ -50,6 +51,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tsdoc": "0.3.0",
+    "globals": "15.9.0",
     "husky": "9.1.5",
     "jest": "29.7.0",
     "lint-staged": "15.2.9",
