--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rollup-plugin-terser": "7.0.2",
     "size-limit": "11.2.0",
     "ts-jest": "29.2.6",
+    "ts-node": "10.9.2",
     "typescript": "5.5.4"
   },
   "files": [
