--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "size-limit": "11.2.0",
     "ts-jest": "29.4.5",
     "ts-node": "10.9.2",
+    "tslib": "2.8.1",
     "typescript": "5.9.3"
   },
   "files": [
